@@ -4,8 +4,8 @@ package vue.simulation;
 import vue.AfficheTopMenu;
 
 import java.util.ArrayList;
-import java.util.HashMap;
 
+import application.Battle;
 import controlleur.ControlleurSimu;
 import javafx.geometry.Insets;
 import javafx.geometry.Pos;
@@ -21,49 +21,47 @@ import javafx.scene.layout.VBox;
 import javafx.stage.Stage;
 import modele.Arme;
 import modele.ArmeMelee;
+import modele.ArmeeListe;
 import modele.Figurine;
 import modele.Unit;
 import modele.User;
 
 public class AfficheSimulation
-//public class Main extends Application
 {
+	private static Battle battle_data = new Battle(); // mémoire des actions de l'utilisateurs, liste, unités, PV, armes, aptitudes
 	private static SimAptAndWeaponsVBox weapons_aptitudes_menu = new SimAptAndWeaponsVBox();
 	
-	public static void setColumn1Bottom(SimAptAndWeaponsVBox wap)
-	{
-		weapons_aptitudes_menu.getChildren().clear();
-		//weapons_aptitudes_menu = wap; // marche pas
-		weapons_aptitudes_menu.getChildren().addAll(wap.getChildren());
-		weapons_aptitudes_menu.setStyle("-fx-border-width: 1; -fx-border-color: black; -fx-border-radius: 2; -fx-padding: 3px;");
+	public static Battle getBattleData() {
+		return battle_data;
 	}
 	
-	// run config: --module-path "C:\Users\greta\CODE\eclipse-java\javafx-sdk-21.0.6\lib" --add-modules javafx.controls
-//	public static void main(String[] args){
-//		launch(args);
-//	}
+	public static void refreshWeaponAndAptitude(SimAptAndWeaponsVBox wap)
+	{
+		weapons_aptitudes_menu.getChildren().clear();
+		weapons_aptitudes_menu.getChildren().addAll(wap.getChildren()); // copie profonde
+		//weapons_aptitudes_menu.setStyle("-fx-border-width: 1; -fx-border-color: black; -fx-border-radius: 2; -fx-padding: 3px;");
+		weapons_aptitudes_menu.setStyle("-fx-background-color: rgb(210, 210, 210); -fx-padding: 4px; -fx-border-color: black; -fx-border-radius: 4;");
+	}
 	
-//	@Override
-//	public void start(Stage primaryStage)
-	public static void affiche(Stage primaryStage,User session)
-	//public static void affiche(Stage primaryStage, ArrayList<ArmeeListe> liste)
+	public static SimAptAndWeaponsVBox getWeaponsAtitudesMenu() {
+		return weapons_aptitudes_menu;
+	}
+	public static void cleanWeaponsAtitudesMenu() {
+		weapons_aptitudes_menu = new SimAptAndWeaponsVBox();
+	}
+	public static void cleanBattle() {
+		battle_data = new Battle();
+	}
+	
+	public static void affiche(Stage primaryStage, User session)
 	{
 		// listes d'armées
-		// y mettre en réalité les noms des listes d'armée
-//		for(ArmeeListe one_list : liste)
-//			String[] attacker_lists =
-//			String[] defenser_lists =
-//		{}
-		String[] attacker_lists = {"Liste 1", "Liste 2", "Liste 3"};
-		String[] defender_lists = {"Liste 1", "Liste 2", "Liste 3"};
-		HashMap<String, String[]> units_names =  new HashMap<String, String[]>();
-		units_names.put("Liste 1", new String[]{"Unité 1", "Unité 2", "Unité 3", "Unité 4", "Unité 5"});
-		units_names.put("Liste 2", new String[]{"Unité 6", "Unité 7", "Unité 8", "Unité 9"});
-		units_names.put("Liste 3", new String[]{"Unité 10", "Unité 11"});
-
+		ArrayList<ArmeeListe> listes = session.getListes(); // listes d'objets ArmeeListe
+		String[] list_names = session.getListNames(); // tableau des noms des listes
+		
 		VBox root_box = new VBox();
 
-		AfficheTopMenu menu = new AfficheTopMenu(primaryStage,session); // menu du haut de l'écran
+		AfficheTopMenu menu = new AfficheTopMenu(primaryStage, session); // menu du haut de l'écran
 
 		HBox main = new HBox(); // partie principale de la fenêtre
 		
@@ -80,13 +78,13 @@ public class AfficheSimulation
         
         
         // menu choix armée
-        HBox col1_first_row = new HBox();
+        HBox col1_first_row = new HBox(); // menu déroulant + logo faction
         ChoiceBox<String> list1_drop_down = new ChoiceBox<>();
         list1_drop_down.setStyle("-fx-font-size: 15;");
         list1_drop_down.prefWidthProperty().bind(column1_scrollpane.widthProperty());
-        for(int i = 0; i < attacker_lists.length; i++)
+        for(int i = 0; i < list_names.length; i++)
         {
-        	list1_drop_down.getItems().add(attacker_lists[i]);
+        	list1_drop_down.getItems().add(list_names[i]);
         }
         col1_first_row.getChildren().add(list1_drop_down);
         column1.getChildren().add(col1_first_row);
@@ -103,18 +101,16 @@ public class AfficheSimulation
         /* -- colonne centrale -- */
         VBox column2 = new VBox();
         column2.prefWidthProperty().bind(main.widthProperty().multiply(0.4));
+        column2.setAlignment(Pos.TOP_CENTER);
         
         	// boutons inverser et simuler   
+		Button btn_simulate = new Button("Action !!");
+		btn_simulate.setStyle("-fx-font-size: 15;");
+		
 		Image icons_inversion = new Image("/images/inversion_icons.png");
 		ImageView icons_inversion_box = new ImageView(icons_inversion);
 		Button reverse_armies = new Button();
 		reverse_armies.setGraphic(icons_inversion_box);
-		Button btn_simulate = new Button("Action !!");
-		btn_simulate.setStyle("-fx-font-size: 15;");
-		
-		HBox column2_top = new HBox();
-        column2_top.setAlignment(Pos.CENTER);
-		column2_top.getChildren().addAll(reverse_armies, btn_simulate);
         
         	// grande image
         Image image_col2 = new Image("/images/wip.jpg");
@@ -128,7 +124,7 @@ public class AfficheSimulation
 		big_image_pane.getChildren().add(image_box);
 		
 			// assemblage
-		column2.getChildren().addAll(column2_top, big_image_pane);
+		column2.getChildren().addAll(btn_simulate, big_image_pane, reverse_armies);
 		
 		
         /* -- colonne de droite -- */
@@ -139,19 +135,19 @@ public class AfficheSimulation
         VBox column3 = new VBox();
         column3.prefWidthProperty().bind(column3_box.widthProperty());
         
-        HBox col3_first_row = new HBox();
+        HBox col3_first_row = new HBox(); // menu déroulant + logo faction
         ChoiceBox<String> list2_drop_down = new ChoiceBox<>();
         list2_drop_down.setStyle("-fx-font-size: 15;");
         list2_drop_down.prefWidthProperty().bind(column1_scrollpane.widthProperty());
-        for(int i = 0; i < defender_lists.length; i++)
+        for(int i = 0; i < list_names.length; i++)
         {
-        	list2_drop_down.getItems().add(defender_lists[i]);
+        	list2_drop_down.getItems().add(list_names[i]);
         }
         col3_first_row.getChildren().add(list2_drop_down);
         column3.getChildren().add(col3_first_row);
         
         // unités colonne 3
-        SimUnitsVBox units_list2 = new SimUnitsVBox(3);
+        SimUnitsVBox units_list2 = new SimUnitsVBox(2);
         column3.getChildren().add(units_list2);
         column3_box.setContent(column3);
         
@@ -161,34 +157,16 @@ public class AfficheSimulation
 		root_box.getChildren().addAll(menu, main);
 		
 		
+		/* ACTION !! */
 		btn_simulate.setOnAction(e -> {
-			ArmeMelee w1 = new ArmeMelee("t1",3,4,1,2,1);
-			ArmeMelee w2 = new ArmeMelee("t2",8,2,3,2,3);
-			ArrayList<Arme> l1= new ArrayList<>();
-			l1.add(w1);
-			l1.add(w2);
-			Figurine fi1 = new Figurine("test1",6,2,3,l1);
-			
-			Figurine fi3 = new Figurine("test15",4,4,2,l1);
-			Figurine fi4 = new Figurine("test14",6,2,3,l1);
-			Figurine fi5 = new Figurine("test13",6,2,3,l1);
-			Figurine fi6 = new Figurine("test12",6,2,3,l1);
-			Figurine fi2 = new Figurine("test9",6,2,2,l1);
-			Figurine fi7 = new Figurine("test76",4,4,2,l1);
-			ArrayList<Figurine> fu1 = new ArrayList<Figurine>();
-			fu1.add(fi1);
-			fu1.add(fi2);
-			fu1.add(fi3);
-			fu1.add(fi4);
-			fu1.add(fi5);
-			fu1.add(fi6);
-			ArrayList<Figurine> fu2 = new ArrayList<Figurine>();
-			fu2.add(fi3);
-			fu2.add(fi7);
-			Unit u1 = new Unit("unite1",fu1);
-			Unit u2 = new Unit("unite2",fu2);
-			//Calcul.bataille(u1, u2,big_image_pane);
-			ControlleurSimu.afficheSimu(big_image_pane,u1,u2);
+			if(battle_data.getSelectedList(1) != null && battle_data.getSelectedList(2) != null
+				&& battle_data.getSelectedUnitIndex(1) > 0 && battle_data.getSelectedUnitIndex(2)  > 0)
+			{
+				ControlleurSimu.afficheSimu(big_image_pane, battle_data.getSelectedUnit(1), battle_data.getSelectedUnit(2));
+			}
+			else {
+				System.out.println("conditions non remplies pour faire une simulation");
+			}
 		});
 		
 		
@@ -211,94 +189,10 @@ public class AfficheSimulation
         for(int i = 0; i < 2; i++)
         {
         	final int j = i;
-        	lists_drop_down.get(i).setOnAction(e -> {
-        		
-        		// Passer par un contrôleur pour obtenir les logos de factions et les unités!!
-        		//ControlleurSimu.changeList(lists_drop_down.get(j).getValue());
-        		
-        		// logo de faction
-        		String file_name = "android-fill.png"; // à récupérer par le contrôleur
-        		Image logo_faction = new Image("/images/" + file_name);
-        		ImageView logo_box = new ImageView();
-        		logo_box.setPreserveRatio(true);
-        		logo_box.fitHeightProperty().bind(lists_drop_down.get(j).heightProperty());
-        		logo_box.setImage(logo_faction);
-        		if(first_rows.get(j).getChildren().size() == 2){
-        			first_rows.get(j).getChildren().remove(1);
-        		}
-        		first_rows.get(j).getChildren().add(logo_box);
-        		
-        		// unités
-        		lists.get(j).getChildren().clear();
-        		lists.get(j).setList(units_names.get(lists_drop_down.get(j).getValue()));
-        		dropdownUnitButtonsAction(lists);
+        	lists_drop_down.get(i).getSelectionModel().selectedItemProperty().addListener((observable, oldValue, newValue)  -> {
+        		ControlleurSimu.selectAList(j + 1, listes, newValue);
+        		ControlleurSimu.PullDownUnits(j + 1, first_rows.get(j), lists.get(j));
             });
         }
-        
-        dropdownUnitButtonsAction(lists); // 1ère fois
 	}
-	
-	private static void dropdownUnitButtonsAction(ArrayList<SimUnitsVBox> lists)
-	{
-		// boutons qui déplient les unités
-		// on met ça ici et non dans SimUnitsVBox parce qu'on gère en même temps la SimAptAndWeaponsVBox
-        // cette évènement devait être géré dans SimUnitsVBox, mais on a besoin de le faire ici
-        for(int c = 0; c < 2; c++) // les c 1 et 2 correspondent aux colonnes 1 et 3
-        {
-        	ArrayList<Button> dropdown_unit_buttons = lists.get(c).getButtons();
-            ArrayList<SimFigurinesVBox> fig_boxes = lists.get(c).getFigBoxes();
-            
-	 		for(int i = 0; i < dropdown_unit_buttons.size(); i++)
-	 		{
-	 			//buttons_units_list1.get(i).setStyle("-fx-border-width: 0; -fx-border-color: yellow; -fx-border-radius: 2;"); // style des bordures
-	 			final int col = c;
-	 			final int j = i; // merci chatgpt pour le trick!
-	 			// impossible d'écrire unit_box.get(i), i ne peut entrer dans la fonction lambda parce qu'il est susceptible de changer à l'extérieur de celle-ci
-	 			
-	 			/* -- BOUTONS des unités --*/
-	 			dropdown_unit_buttons.get(i).setOnAction(e ->
-	 			{
-	 				// dérouler ou replier les figurines
-	 				fig_boxes.get(j).changeState();
-	 				
-	 				// retirer bordure unité désélectionnée
-	 				if(lists.get(col).getSelectedUnit() > 0)
-	 				{
-	 					dropdown_unit_buttons.get(lists.get(col).getSelectedUnit() - 1).setStyle("-fx-border-width: 0;");
-	 				}
-	 				
-	 				if(fig_boxes.get(j).isOpen())
-	 				{
-	 					// afficher figurines
-	 					fig_boxes.get(j).setFigurines();
-	 					if(lists.get(col).getSelectedUnit() != j + 1)
-	 					{
-	 						lists.get(col).setSelectedUnit(j + 1);
-	 						if(col == 0)
-	 						{
-	 							weapons_aptitudes_menu.getChildren().clear();
-	 						}
-	 					}
-	 					// bordure unité sélectionnée
-	 					dropdown_unit_buttons.get(j).setStyle("-fx-border-width: 2; -fx-border-color: yellow; -fx-border-radius: 2;");
-	 				}
-	 				else
-	 				{
-	 					// cacher figurine
-	 					fig_boxes.get(j).getChildren().clear(); // index est constant dans sa portée, alors que i change
-	 					if(col == 0)
-	 					{
-	 						weapons_aptitudes_menu.getChildren().clear();
-	 					}
-	 					lists.get(col).setSelectedUnit(0); // valeur "impossible"
-	 					
-	 					// retirer bordure unité désélectionnée
-	 					dropdown_unit_buttons.get(j).setStyle("-fx-border-width: 0;");
-	 				}
-	 			});
-	 		}
-        }
-	}
-
 }
-
